Actulizacion logos y medicos

--- a/appVeterinaria/src/VISTA/frmLogin.form
+++ b/appVeterinaria/src/VISTA/frmLogin.form
@@ -81,7 +81,7 @@
             <Component class="javax.swing.JTextField" name="txtUsuario">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="84" green="5c" red="1" type="rgb"/>
+                  <Color blue="bf" green="a1" red="30" type="rgb"/>
                 </Property>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI Light" size="14" style="1"/>
@@ -122,7 +122,7 @@
             <Component class="javax.swing.JPasswordField" name="pssPasword">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="84" green="5c" red="1" type="rgb"/>
+                  <Color blue="bf" green="a1" red="30" type="rgb"/>
                 </Property>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="14" style="1"/>
@@ -228,7 +228,7 @@
             <Container class="javax.swing.JPanel" name="jPanel7">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="84" green="5c" red="1" type="rgb"/>
+                  <Color blue="bf" green="a1" red="30" type="rgb"/>
                 </Property>
               </Properties>
               <Constraints>
